fix bad wrapping in no-tabs case

--- a/src/vs/workbench/browser/parts/editor/media/editorgroupview.css
+++ b/src/vs/workbench/browser/parts/editor/media/editorgroupview.css
@@ -48,6 +48,11 @@
 	overflow: hidden;
 }
 
+.monaco-workbench > .part.editor > .content .editor-group-container > .title:not(.tabs) {
+	display: flex; /* when tabs are not shown, use flex layout */
+	flex-wrap: nowrap;
+}
+
 .monaco-workbench > .part.editor > .content .editor-group-container > .title.title-border-bottom::after {
 	content: '';
 	position: absolute;
